--- a/OnClinck/index.html
+++ b/OnClinck/index.html
@@ -7,8 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    
-    
+    <!-- internal js -->
+    <button onclick="alert('The is Clicked... ')">Click Me..</button>
+    <!-- external Js -->
+    <button onclick="message()">Click...</button>
+</br>
+</br>
+
+
+<!-- ----------set html -------------------- -->
+
+    <button onclick="message2()">Message01</button>
+    <button onclick="message3()">Message02</button>
+    <p id="mess">Loading...</p>
+<p></p>
+<!------------- img add ------------>
+    <img id="imgId" src="#" alt=" This is img fille" height="300px" width="300px">
+
+    <button onclick="img01()">Midul</button>
+    <button onclick="img02()">Mahodi</button>
+
     <script src="index.js"></script>
 </body>
 </html>
