--- a/Event listener/index.html
+++ b/Event listener/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Click</p>
+
+    <!-- <p>Click</p>
     <h1 id="text">yes i am programmer</h1>
 
     <p>Mouseover</p>
@@ -16,6 +17,14 @@
 
     <p>Mouseout</p>
     <h1 id="leve">yes i am programmer</h1>
+
+    <br><br><br><br> -->
+    
+    <!-- Multiple -->
+    <p>you have not clicked any button</p>
+    <button class="myButtion">Button 01</button>
+    <button class="myButtion">Button 02</button>
+    <button class="myButtion">Button 03</button>
 
     <script src="index.js"></script>
 </body>
